--- a/white/index.html
+++ b/white/index.html
@@ -12,15 +12,10 @@
 <body>
     <div class="block">
         <div class="wrap">
-            <header>
-                <div class="logo"></div>
-                <p class="opros">Краткий опрос
-                    <br><span><span id="step-data">1</span> шаг из 8</span></p>
-            </header>
             <div id="opros-wrap" data-step="1">
                 <section class="sec active" data-step="1">
                     <h2>Мы знаем что вы размещали объявление в Яндекс.Директ.<br>На сколько вы довольны результатом?</h2>
-                    <div class="btn_gr">
+                    <div class="btna_gr">
                         <a class="otvet" href="" data-otvet="1" data-nextstep="2">Доволен на 100%</a>
                         <a class="otvet" href="" data-otvet="2" data-nextstep="2">Могло быть и лучше</a>
                         <a class="otvet" href="" data-otvet="3" data-nextstep="2">Не доволен, слил бюджет</a>
@@ -30,7 +25,7 @@
                 </section>
                 <section class="sec" data-otvet="1" data-step="2">
                     <h2>Мы очень рады за Вас, тем не менее, хотите ли вы<br> улучшить показатели?</h2>
-                    <div class="btn_gr mid">
+                    <div class="btna_gr mid">
                         <a class="var" href="" data-var="1" data-nextstep="3">Нет, меня все устравиает</a>
                         <a class="var" href="" data-var="2" data-nextstep="3">Безусловно</a>
                     </div>
@@ -38,14 +33,14 @@
                 </section>                
                 <section class="sec" data-otvet="1" data-step="3" data-var="1">
                     <h2>Хорошо, тогда ознакомьтесь с нашим<br> предложением, возможно оно вас заинтересует.</h2>
-                    <div class="btn_gr mid">
+                    <div class="btna_gr mid">
                         <a href="">скчать, ссылка на сайт</a>
                     </div>
                     <a href="" class="back" data-prevstep="2">НАЗАД</a>
                 </section>
                 <section class="sec" data-otvet="1" data-step="3" data-var="2">
                     <h2>В данный момент реклама запущена?</h2>
-                    <div class="btn_gr">
+                    <div class="btna_gr">
                         <a href="" data-nextstep="4">Да</a>
                         <a href="" data-nextstep="4">Нет</a>
                     </div>
@@ -53,7 +48,7 @@
                 </section>
                 <section class="sec" data-otvet="1" data-step="4">
                     <h2>Какой в среднем бюджет вы тратили в месяц?</h2>
-                    <div class="btn_gr">
+                    <div class="btna_gr">
                         <a href="" data-nextstep="5">До 100 тыс. руб.</a>
                         <a href="" data-nextstep="5">От 100 до 300 тыс. руб.</a>
                         <a href="" data-nextstep="5">От 300 тыс. до 1 млн. руб.</a>
@@ -63,7 +58,7 @@
                 </section>
                 <section class="sec" data-otvet="2" data-step="2">
                     <h2>Что конкретно вас не устраивает?</h2>
-                    <div class="btn_gr">
+                    <div class="btna_gr">
                         <a href="" data-nextstep="3">Мало заявок</a>
                         <a href="" data-nextstep="3">Заявки не целевые</a>
                         <a href="" data-nextstep="3">Дорогие заявки</a>
@@ -73,7 +68,7 @@
                 </section>
                 <section class="sec" data-otvet="2" data-step="3">
                     <h2>В данный момент реклама запущена?</h2>
-                    <div class="btn_gr">
+                    <div class="btna_gr">
                         <a class="var" href="" data-nextstep="4" data-var="1">Да</a>
                         <a class="var" href="" data-nextstep="4" data-var="2">Нет</a>
                     </div>
@@ -81,7 +76,7 @@
                 </section>
                 <section class="sec" data-otvet="2" data-step="4" data-var="1">
                     <h2>Какой в среднем бюджет вы тратите в месяц?</h2>
-                    <div class="btn_gr">
+                    <div class="btna_gr">
                         <a href="" data-nextstep="5">До 100 тыс. руб.</a>
                         <a href="" data-nextstep="5">От 100 до 300 тыс. руб.</a>
                         <a href="" data-nextstep="5">От 300 тыс. до 1 млн. руб.</a>
@@ -91,7 +86,7 @@
                 </section>
                 <section class="sec" data-otvet="2" data-step="4" data-var="2">
                     <h2>Какой в среднем бюджет вы тратили в месяц?</h2>
-                    <div class="btn_gr">
+                    <div class="btna_gr">
                         <a href="" data-nextstep="5">До 100 тыс. руб.</a>
                         <a href="" data-nextstep="5">От 100 до 300 тыс. руб.</a>
                         <a href="" data-nextstep="5">От 300 тыс. до 1 млн. руб.</a>
@@ -101,7 +96,7 @@
                 </section>                    
                 <section class="sec" data-otvet="3" data-step="2">
                     <h2>Что конкретно вас не устраивает?</h2>
-                    <div class="btn_gr">
+                    <div class="btna_gr">
                         <a href="" data-nextstep="3">Мало заявок</a>
                         <a href="" data-nextstep="3">Заявки не целевые</a>
                         <a href="" data-nextstep="3">Дорогие заявки</a>
@@ -110,7 +105,7 @@
                 </section>
                 <section class="sec" data-otvet="3" data-step="3">
                     <h2>В данный момент реклама запущена?</h2>
-                    <div class="btn_gr">
+                    <div class="btna_gr">
                         <a href="" class="var" data-var="1" data-nextstep="4">Да</a>
                         <a href="" class="var" data-var="1" data-nextstep="4">Нет</a>
                     </div>
@@ -118,7 +113,7 @@
                 </section>
                 <section class="sec" data-otvet="3" data-step="4" data-var="1">
                     <h2>Какой в среднем бюджет вы тратите в месяц?</h2>
-                    <div class="btn_gr">
+                    <div class="btna_gr">
                         <a href="" data-nextstep="5">До 100 тыс. руб.</a>
                         <a href="" data-nextstep="5">От 100 до 300 тыс. руб.</a>
                         <a href="" data-nextstep="5">От 300 тыс. до 1 млн. руб.</a>
@@ -128,7 +123,7 @@
                 </section>
                 <section class="sec" data-otvet="3" data-step="4" data-var="2">
                     <h2>Какой в среднем бюджет вы тратили в месяц?</h2>
-                    <div class="btn_gr">
+                    <div class="btna_gr">
                         <a href="" data-nextstep="5">До 100 тыс. руб.</a>
                         <a href="" data-nextstep="5">От 100 до 300 тыс. руб.</a>
                         <a href="" data-nextstep="5">От 300 тыс. до 1 млн. руб.</a>
@@ -140,7 +135,7 @@
 
                 <section class="sec" data-otvet="4" data-step="2">
                     <h2>Сколько денег вы потратили в молоко?</h2>
-                    <div class="btn_gr">
+                    <div class="btna_gr">
                         <a href="" data-nextstep="3">До 100 тыс. руб.</a>
                         <a href="" data-nextstep="3">От 100 до 300 тыс. руб.</a>
                         <a href="" data-nextstep="3">От 300 тыс. до 1 млн. руб.</a>
@@ -150,7 +145,7 @@
                     
                 <section class="sec" data-otvet="4" data-step="3">
                     <h2>К сожалению не всем везет с подрядчиками, зачастую попадаются исполнители, которые не обладают достаточным объемом знаний, готовы ли вы поработать и исполнителем, который делает реальный результат?</h2>
-                    <div class="btn_gr mid">
+                    <div class="btna_gr mid">
                         <a href="" data-nextstep="4">Можно попробовать</a>
                         <a href="" data-nextstep="5">Никому не доверяю</a>
                     </div>
@@ -158,35 +153,35 @@
                 </section>
                 <section class="sec" data-otvet="4" data-step="4">
                     <h2>Хорошо, тогда ознакомьтесь с нашим предложением, возможно оно вас заинтересует</h2>
-                    <div class="btn_gr mid">
+                    <div class="btna_gr mid">
                         <a href="">Скчать</a>
                     </div>
                     <a href="" class="back" data-prevstep="3">НАЗАД</a>
                 </section>                
                 <section class="sec" data-otvet="1" data-step="5">
                     <h2>95% рекламодателей допускают десятки ошибок в Яндекс Директ, мы знаем это, так как только за последние 2 года обучили свыше 1500 маркетологов. Вы можете экономить как минимум 40% вашего бюджета, при этом получая больше заявок и мы знаем как это реализовать, узнайте подробности о нашем предложении для вас.</h2>
-                    <div class="btn_gr mid">
+                    <div class="btna_gr mid">
                         <a href="" data-nextstep="6">Узнать подробности</a>
                     </div>
                     <a href="" class="back" data-prevstep="4">НАЗАД</a>
                 </section>                
                 <section class="sec" data-otvet="2" data-step="5">
                     <h2>95% рекламодателей допускают десятки ошибок в Яндекс Директ, мы знаем это, так как только за последние 2 года обучили свыше 1500 маркетологов. Вы можете экономить как минимум 40% вашего бюджета, при этом получая больше заявок и мы знаем как это реализовать, узнайте подробности о нашем предложении для вас.</h2>
-                    <div class="btn_gr mid">
+                    <div class="btna_gr mid">
                         <a href="" data-nextstep="6">Узнать подробности</a>
                     </div>
                     <a href="" class="back" data-prevstep="4">НАЗАД</a>
                 </section>                
                 <section class="sec" data-otvet="3" data-step="5">
                     <h2>95% рекламодателей допускают десятки ошибок в Яндекс Директ, мы знаем это, так как только за последние 2 года обучили свыше 1500 маркетологов. Вы можете экономить как минимум 40% вашего бюджета, при этом получая больше заявок и мы знаем как это реализовать, узнайте подробности о нашем предложении для вас.</h2>
-                    <div class="btn_gr mid">
+                    <div class="btna_gr mid">
                         <a href="" data-nextstep="6">Узнать подробности</a>
                     </div>
                     <a href="" class="back" data-prevstep="4">НАЗАД</a>
                 </section>                
                 <section class="sec" data-otvet="4" data-step="5">
                     <h2>95% рекламодателей допускают десятки ошибок в Яндекс Директ, мы знаем это, так как только за последние 2 года обучили свыше 1500 маркетологов. Вы можете экономить как минимум 40% вашего бюджета, при этом получая больше заявок и мы знаем как это реализовать, узнайте подробности о нашем предложении для вас.</h2>
-                    <div class="btn_gr mid">
+                    <div class="btna_gr mid">
                         <a href="" data-nextstep="6">Узнать подробности</a>
                     </div>
                     <a href="" class="back" data-prevstep="3">НАЗАД</a>
@@ -198,7 +193,7 @@
                             <p>Мы выбрали нишу, в которой уверены, что сделаем результат.
                                 <br> Мы выбираем такие ниши, в которых все наши услуги окупаются за 1 - 10 продаж, не более.
                                 <br> После отправили письмо на почту Вам и всем вашим конкурентам.</p>
-                            <div class="btn_gr">
+                            <div class="btna_gr">
                                 <a href="" class="fact-btn" data-nextfact="2">ФАКТ №2</a>
                             </div>
                             <a href="" class="back" data-prevstep="5">НАЗАД</a> 
@@ -206,7 +201,7 @@
                         <div class="fact" data-fact="2">                        
                             <h2 class="fak"><span>Факт №2.</span> Мы делаем сайт только для одного клиента из подниши.</h2>
                             <p>Мы сегментируем рынок по поднишам, например, если юридическое услуги - это ниша, то банкротство юр. лиц - подниша. Ремонт - ниша, ремонт коттеджей - подниша. При сегментации мы опираемся на спрос.</p>
-                            <div class="btn_gr">
+                            <div class="btna_gr">
                                 <a href="" class="fact-btn" data-nextfact="3">ФАКТ №3</a>
                             </div>            
                             <a href="" class="back back-fact" data-prevfact="1">НАЗАД</a>             
@@ -214,7 +209,7 @@
                         <div class="fact" data-fact="3">
                             <h2 class="fak"><span>Факт №3.</span> Мы говорим только о результате.</h2>
                             <p>Мы не пускаем пыль в глаза словами типа трафик или ctr, есть только 3 критерия: теплота заявок их количество и цена.</p>
-                            <div class="btn_gr">
+                            <div class="btna_gr">
                                 <a href="" class="fact-btn" data-nextfact="4">ФАКТ №4</a>
                             </div>                  
                             <a href="" class="back back-fact" data-prevfact="2">НАЗАД</a>       
@@ -222,7 +217,7 @@
                         <div class="fact" data-fact="4">
                             <h2 class="fak"><span>Факт №4.</span> Мы уверены в результате.<br> Поэтому разделяем с вами риски 50/50.</h2>
                             <p>Вам есть с чем сравнивать, вы видели что такое - плохая рекламная компания, которая только высасывает ваш бюджет. По этому мы работаем следующим образом. Вы платите 28% от общей стоимости договора + выделяете рекламный бюджет. Мы делаем под ключ сайт и рекламу. Мы запускаем рекламу, если вы довольны - доплачиваете остаток, если не довольны, мы возвращаем вам 50% вложенных средств.</p>
-                            <div class="btn_gr">
+                            <div class="btna_gr">
                                 <a href="" class="fact-btn" data-nextfact="5">ФАКТ №5</a>
                             </div>  
                             <a href="" class="back back-fact" data-prevfact="3">НАЗАД</a>                       
@@ -230,7 +225,7 @@
                         <div class="fact" data-fact="5">
                             <h2 class="fak"><span>Факт №5.</span> Мы делаем крутые сайты.<br> Посмотрите последние примеры наших работ.</h2>
                             <p>Мы не бьем себя в грудь и не кричим, что мы лучшие, мы просто делаем результат. 4 года опыта, свыше 140 проектов.</p>
-                            <div class="btn_gr">
+                            <div class="btna_gr">
                                 <a href="" data-nextstep="7">О деньгах и сроках</a>
                             </div>  
                             <a href="" class="back back-fact" data-prevfact="4">НАЗАД</a>                       
@@ -251,7 +246,7 @@
                                     <br> 350 000 рублей.</p>
                             </div>
                             <div class="clear"></div>
-                            <div class="btn_gr mid">
+                            <div class="btna_gr mid">
                                 <a href="" class="re show-etap">I.  Этап. Старт</a>
                             </div>
                             <a href="" class="back" data-prevstep="6">НАЗАД</a>
@@ -272,7 +267,7 @@
                                 <p class="rub">100 000 руб</p>
                             </div>
                             <div class="clear"></div>
-                            <div class="btn_gr">
+                            <div class="btna_gr">
                                 <a href="" class="re next-etap" data-nextetap="2">II. Этап. Аналитика</a>
                             </div>
                             <a href="" class="back hide-etap">НАЗАД</a>
@@ -288,7 +283,7 @@
                                 <p class="rub">150 000 руб</p>
                             </div>
                             <div class="clear"></div>
-                            <div class="btn_gr">
+                            <div class="btna_gr">
                                 <a href="" class="re next-etap" data-nextetap="3">  III Этап. Докрутка</a>
                             </div>
                             <a href="" class="back back-etap" data-prevetap="1">НАЗАД</a>
@@ -304,7 +299,7 @@
                                 <p class="rub">100 000 руб</p>
                             </div>
                             <div class="clear"></div>
-                            <div class="btn_gr">
+                            <div class="btna_gr">
                                 <a href="" class="re do" data-nextstep="8">Секрет. Почему наша реклама работает?</a>
                             </div>
                             <a href="" class="back back-etap" data-prevetap="2">НАЗАД</a>
@@ -319,7 +314,7 @@
                             <br> Готовы ли вы встретиться с нами, чтобы обсудить условия работы?
                             <br> Встреча бесплатна и займет не более 30 минут.
                             <br> На встрече мы расскажем вам, благодаря каким инструментам мы делаем результат. </p>
-                        <div class="btn_gr mid">
+                        <div class="btna_gr mid">
                             <a href="" class="re fins-btn" data-fins="1">Я воздержусь</a>
                             <a href="" class="re fins-btn" data-fins="2">Хочу встретиться с вами</a>
                         </div>
@@ -327,7 +322,7 @@
                     </div>                    
                     <div class="fins" data-fins="1">
                         <h2>Хорошо, посмотрите на наш сайт, возможно вы измените свое решение</h2>
-                        <div class="btn_gr mid">
+                        <div class="btna_gr mid">
                             <a href="">скчать, ссылка на сайт</a>
                         </div>
                         <a href="" class="back back-fins">НАЗАД</a>
