--- a/recommend/mobile/index.html
+++ b/recommend/mobile/index.html
@@ -459,6 +459,7 @@
 <script src="js/jquery.maskedinput.min.js"></script>
 <script src="js/jquery.touchswipe.min.js"></script>
 <script src="js/main.min.js"></script>
+<!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter36735595 = new Ya.Metrika({ id:36735595, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/36735595" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
+<script>setTimeout(function(){yaCounter36735595.reachGoal('z_re_m')},3000);</script>
 </body>
-
 </html>
