--- a/yandex/mobile/index.html
+++ b/yandex/mobile/index.html
@@ -406,9 +406,9 @@
        <h2 class="fak"><span>Факт №5.</span> Мы делаем крутые сайты.</h2>
        <p style="margin-top:0px!important">Задача сайта не продажа, а заявка, продавать должен менеджер. Сайт должен быть легок, удобен, прост и информативен. Обязательно адаптирован под все устройства.<br><br>Посмотрите последние примеры наших работ.</p>
        <p style="margin-top:10px!important">Перед просмотром обязательно откройте эту ссылку в браузере (не в приложении VK).</p>
-       <div class="btn_gr">
-        <a href="http://karmalogic.travel/" class="site-link site-link-btn" target="_blank">KarmaLogic</a>
-        <a href="http://grand-euro.ru/" class="site-link site-link-btn" target="_blank">Элитный ремонт</a>
+       <div class="btn_gr" style="padding: 0">
+        <a href="http://karmalogic.travel/" class="site-link site-link-btn" target="_blank" style="width: 190px">KarmaLogic</a>
+        <a href="http://grand-euro.ru/" class="site-link site-link-btn" target="_blank" style="width: 190px">Элитный ремонт</a>
         <a href="http://xn---214-43dlwogeu1bzcxcyf.xn--p1ai/" class="site-link site-link-btn" target="_blank">Споры с застройщиками</a>
         <a href="" data-nextstep="7" style="position:relative;top:-15px">О деньгах и сроках</a>
        </div>  
