Центрирование и дебаг первого факта

--- a/yandex/mobile/index.html
+++ b/yandex/mobile/index.html
@@ -69,9 +69,11 @@
           <div class="start" data-start="5">
               <div class="vert-center-wrap">
                   <h2>Что вас интересует?</h2>
-                  <div class="btn_gr">
-                      <a href="" class="next-start two-lines" data-nextstart="6">Обучение и самостоятельная настройка</a>
-                      <a href="" data-nextstep="5">Результат под ключ</a>
+                  <div class="vert-center-cont" style="position:absolute">
+                    <div class="btn_gr">
+                        <a href="" class="next-start two-lines" data-nextstart="6">Обучение и самостоятельная настройка</a>
+                        <a href="" data-nextstep="5">Результат под ключ</a>
+                    </div>
                   </div>
               </div>
               <a href="" class="back prev-start" data-prevstart="1">НАЗАД</a>
@@ -357,9 +359,9 @@
     <section class="sec" data-step="6">
      <div class="facts">
       <div class="fact active" data-fact="1">
-       <h2 class="fak"><span>Факт №1.</span> Нас знают в мире маркетинга.</h2>
+       <h2 class="fak" style="padding:0;line-height:20px!important;"><span>Факт №1.</span> Нас знают в мире маркетинга.</h2>
        <div class="vert-center-wrap">
-        <div class="vert-center-cont">
+        <div class="vert-center-cont" style="top: 52%">
           <p style="margin:0;padding:0 25px">Мы знаем тонкости настройки Яндекс Директ, вы можете уделить пару часов времени и убедиться в этом или поверить и листать дальше</p>
          <iframe src="https://www.youtube.com/embed/jsQofOB_ANQ?rel=0&amp;showinfo=0" style="border:0;width:355px;height:200px"></iframe>
          <p style="margin:0;padding:0 25px">Важно: видео от августа 2014 года, за это время в Яндексе произошло много изменений.</p>
@@ -374,7 +376,7 @@
        <h2 class="fak"><span>Факт №2.</span> Мы делаем сайт только для одного клиента из подниши.<br>Мы не будем работать с вашими конкурентами.</h2>
        <div class="vert-center-wrap">
         <div class="vert-center-cont">
-         <p style="margin-bottom:40px">Мы сегментируем рынок по поднишам, например, если юридическое услуги - это ниша, то банкротство юр. лиц - подниша. Ремонт - ниша, ремонт коттеджей - подниша. При сегментации мы опираемся на спрос.</p>
+         <p style="margin-top:40px;margin-bottom:40px">Мы сегментируем рынок по поднишам, например, если юридическое услуги - это ниша, то банкротство юр. лиц - подниша. Ремонт - ниша, ремонт коттеджей - подниша. При сегментации мы опираемся на спрос.</p>
          <div class="btn_gr">
           <a href="" class="fact-btn" data-nextfact="3">ФАКТ №3</a>
          </div>  
@@ -386,7 +388,7 @@
        <h2 class="fak"><span>Факт №3.</span> Мы говорим только о результате.</h2>
        <div class="vert-center-wrap">
         <div class="vert-center-cont">
-         <p style="position:relative;top:-50px">Мы не пускаем пыль в глаза словами типа трафик или CTR, есть только 3 критерия:<br>теплота заявок, их количество и цена.<br><br>Мы не бьем себя в грудь и не кричим, что мы лучшие, мы просто делаем результат. 4 года опыта, свыше 140 проектов.</p>
+         <p style="position:relative;">Мы не пускаем пыль в глаза словами типа трафик или CTR, есть только 3 критерия:<br>теплота заявок, их количество и цена.<br><br>Мы не бьем себя в грудь и не кричим, что мы лучшие, мы просто делаем результат. 4 года опыта, свыше 140 проектов.</p>
          <div class="btn_gr">
           <a href="" class="fact-btn" data-nextfact="4">ФАКТ №4</a>
          </div>   
@@ -396,7 +398,7 @@
       </div>
       <div class="fact" data-fact="4">
        <h2 class="fak" style="margin-top:20px!important"><span>Факт №4.</span> Мы уверены в результате.<br> Поэтому разделяем с вами риски 50/50.</h2>
-       <p style="margin-top:10px">Мы работаем следующим образом: Вы платите 28% от общей стоимости договора + выделяете рекламный бюджет. Мы делаем под ключ сайт, настраиваем рекламу, устанавливаем ставки и запускаемся. Когда утвержденный рекламный бюджет освоен, Вы принимаете решение, если Вы довольны – платите сумму, оговоренную вторым этапом, и мы переходим к Аналитике, если не довольны, мы возвращаем Вам 50% вложенных средств.</p>
+       <p style="margin-top:50px">Мы работаем следующим образом: Вы платите 28% от общей стоимости договора + выделяете рекламный бюджет. Мы делаем под ключ сайт, настраиваем рекламу, устанавливаем ставки и запускаемся. Когда утвержденный рекламный бюджет освоен, Вы принимаете решение, если Вы довольны – платите сумму, оговоренную вторым этапом, и мы переходим к Аналитике, если не довольны, мы возвращаем Вам 50% вложенных средств.</p>
        <div class="btn_gr" style="margin-top:10px">
         <a href="" class="fact-btn" data-nextfact="5" style="min-height:20px">ФАКТ №5</a>
        </div>  
@@ -526,14 +528,14 @@
             <p class="kkon">Все Ваши данные полностью конфедициальны</p>
             <a href="" class="back back-fins">НАЗАД</a>
         </div>                    
-        <div class="fins" data-fins="3">
+        <div class="fins" data-fins="3" style="padding-top:85px;">
             <h2>В таком случае у нас есть для Вас партнерское предложение. Если Вы до 15 мая порекомендуете наше агентство своему другу или подруге и у нас закажут полноценную услугу на наших условиях, мы сделаем для вас либо сайт либо настройку рекламы, если придете 2х клиентов, тогда и сайт и рекламу. Скачайте презентацию с нашим предложением.</h2>
             <div class="btn_gr mid">
               <a href="" class="download">скачать</a>
             </div>
             <a href="" class="back back-fins">НАЗАД</a>
         </div>                    
-        <div class="fins" data-fins="4">
+        <div class="fins" data-fins="4" style="padding-top:210px;">
             <h2>Хорошо, посмотрите на наш сайт, возможно вы измените свое решение</h2>
             <div class="btn_gr mid">
                 <!--a href="" class="download">скачать</a>
