--- a/landing/mobile/index.html
+++ b/landing/mobile/index.html
@@ -52,8 +52,8 @@
                   <h2>Что вас интересует?</h2>
                   <div class="vert-center-cont" style="position:absolute">
                     <div class="btn_gr">
-                      <a href="" class="next-start" data-nextstart="6">Только сайт</a>
-                      <a href="" class="next-start" data-nextstart="6">Результат под ключ</a>
+                      <a href="" data-nextstep="5">Только сайт</a>
+                      <a href="" data-nextstep="5">Результат под ключ</a>
                     </div>
                   </div>
               </div>
@@ -62,7 +62,7 @@
           <div class="start" data-start="6">
               <div class="vert-center-wrap">
                   <div class="vert-center-cont" style="position:absolute">
-                    <h2>Мы работаем только на результат, если мы делаем Сайт, то в обязательном порядке и настраиваем Яндекс Директ, в противном случае за результат мы отвечать не можем. Поэтому наше агентство делает и сайт и настройку и несет ответственность за результат рублем. Узнайте подробности о нашем предложении для вас.</h2>
+                    <h2 style="margin-top: 11px;">Мы работаем только на результат, если мы делаем Сайт, то в обязательном порядке и настраиваем Яндекс Директ, в противном случае за результат мы отвечать не можем. Поэтому наше агентство делает и сайт и настройку и несет ответственность за результат рублем. Узнайте подробности о нашем предложении для вас.</h2>
                     <div class="btn_gr">
                         <a href="" data-nextstep="6">Узнать подробности</a>
                     </div>
@@ -324,10 +324,14 @@
      <a href="" class="back" data-prevstep="3">НАЗАД</a>
     </section>
     <section class="sec" data-otvet="5" data-step="5">
-     <h2>95% рекламодателей допускают десятки ошибок в Яндекс Директ и Landing page, мы знаем это, так как только за последние 2 года обучили свыше 1500 маркетологов. Вы можете экономить как минимум 40% вашего бюджета, при этом получая больше заявок и мы знаем как это реализовать, узнайте подробности о нашем предложении для Вас.</h2>
-     <div class="btn_gr mid">
-      <a href="" data-nextstep="6">Узнать подробности</a>
-     </div>
+      <div class="vert-center-wrap">
+          <div class="vert-center-cont" style="position:absolute">
+            <h2 style="margin-top: 11px;padding: 0 20px">Мы работаем только на результат, если мы делаем Сайт, то в обязательном порядке и настраиваем Яндекс Директ, в противном случае за результат мы отвечать не можем. Поэтому наше агентство делает и сайт и настройку и несет ответственность за результат рублем. Узнайте подробности о нашем предложении для вас.</h2>
+            <div class="btn_gr">
+                <a href="" data-nextstep="6">Узнать подробности</a>
+            </div>
+          </div>
+      </div>
      <a href="" class="back" data-prevstep="0">НАЗАД</a>
     </section>
     <section class="sec" data-step="6">
