--- a/yandex/mobile/index.html
+++ b/yandex/mobile/index.html
@@ -49,7 +49,7 @@
           </div>
           <div class="start" data-start="3">
               <div class="vert-center-wrap">
-                  <h2>Как показывает практика, в 95% ниш, за исключением товарки с прайсом более чем в 15 наименований, эффективность многостраничных сайтов в Яндекс Директ в разы ниже чем у одностраничных. Мы делаем результат под ключ поэтому уверены в необходимости разработки одностраничного сайта, самое главное, что интересует Вас?</h2>
+                  <h2 style="margin-top:40px">Как показывает практика, в 95% ниш, за исключением товарки с прайсом более чем в 15 наименований, эффективность многостраничных сайтов в Яндекс Директ в разы ниже чем у одностраничных. Мы делаем результат под ключ поэтому уверены в необходимости разработки одностраничного сайта, самое главное, что интересует Вас?</h2>
                   <div class="btn_gr">
                       <a href="" data-nextstep="1">Результат под ключ</a>
                       <a href="" class="next-start two-lines" data-nextstart="4">Обучение и самостоятельная настройка</a>
@@ -59,7 +59,7 @@
           </div>
           <div class="start" data-start="4">
               <div class="vert-center-wrap">
-                  <h2 style="line-height:28px">У нашей компании есть партнерская программа. Если Вы порекомендуете нас вашему знакомому, который будет готов работать с нами под ключ на наших условиях, мы предоставим для вам поэтапный план настройки Яндекс Директ именно для вашей ниши, с вашими ключевыми запросами и минус словами. Для этого Вам необходимо узнать подробности о нашем предложении, скачайте презентацию, чтобы делиться с друзьями, если кто-то заинтересуется звоните и мы обсудим условия.</h2>
+                  <h2 style="line-height:28px;margin-top:30px">У нашей компании есть партнерская программа. Если Вы порекомендуете нас вашему знакомому, который будет готов работать с нами под ключ на наших условиях, мы предоставим для вам поэтапный план настройки Яндекс Директ именно для вашей ниши, с вашими ключевыми запросами и минус словами. Для этого Вам необходимо узнать подробности о нашем предложении, скачайте презентацию, чтобы делиться с друзьями, если кто-то заинтересуется звоните и мы обсудим условия.</h2>
                   <div class="btn_gr">
                       <a href="" class="download">Скачать презентацию</a>
                   </div>
@@ -80,7 +80,7 @@
           </div>
           <div class="start" data-start="6">
               <div class="vert-center-wrap">
-                  <h2 style="line-height:28px">У нашей компании есть партнерская программа. Если Вы порекомендуете нас вашему знакомому, который будет готов работать с нами под ключ на наших условиях, мы предоставим для вам поэтапный план настройки Яндекс Директ именно для вашей ниши, с вашими ключевыми запросами и минус словами. Для этого Вам необходимо узнать подробности о нашем предложении, скачайте презентацию, чтобы делиться с друзьями, если кто-то заинтересуется звоните и мы обсудим условия.</h2>
+                  <h2 style="line-height:28px;margin-top:30px">У нашей компании есть партнерская программа. Если Вы порекомендуете нас вашему знакомому, который будет готов работать с нами под ключ на наших условиях, мы предоставим для вам поэтапный план настройки Яндекс Директ именно для вашей ниши, с вашими ключевыми запросами и минус словами. Для этого Вам необходимо узнать подробности о нашем предложении, скачайте презентацию, чтобы делиться с друзьями, если кто-то заинтересуется звоните и мы обсудим условия.</h2>
                   <div class="btn_gr">
                       <a href="" class="download">Скачать презентацию</a>
                   </div>
